# ai-stock-picker

./: .gitignore  .mcp.json  README.md  pyproject.toml
src/ai_stock_picker/: __init__.py  analysis.py  cli.py  compare.py  earnings.py  market_data.py  mcp_server.py  momentum.py  risk.py  screener.py  sp500.py  suggest.py
src/ai_stock_picker/strategies/: __init__.py  dalio.py  jones.py  kotegawa.py  livermore.py  paulson.py  selector.py  simons.py  soros.py
