[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-stock-picker"
version = "0.1.0"
description = "AI-powered stock research and suggestion engine"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Javeed Sanganakal"}
]
dependencies = [
    "yfinance>=0.2.30",
    "pandas>=2.0",
    "numpy>=1.24",
    "rich>=13.0",
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
]

[project.scripts]
ai-stock-picker = "ai_stock_picker.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
